<resources>
    <string name="app_name">Collaborative Art</string>
    <string name="logged_in_user_string">Now you are a logged in user of this app!</string>
    <string name="account_login_string">Account login</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="add_memoir_string">Add Memoir</string>
    <string name="location_of_post_string">Location of Post</string>
    <string name="memoir_hint_string">Enter your 6-word memoir</string>
    <string name="memoir_string">6-word memoir</string>
    <string name="author_hint_string">Author</string>
    <string name="map_location_string">Map Location</string>
    <string name="save_string">Save</string>
    <string name="service_not_available">This service is not available</string>
    <string name="invalid_location">Invalid location used</string>
    <string name="no_address_found">No address found</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="goes_to_location_display">Map</string>
    <string name="search_hint">Search Locations</string>
    <string name="search_description">Search by Location</string>
</resources>
