<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".collaborativeArt.AddMemoirActivity">

    <TextView
        android:id="@+id/memoirText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/browser_actions_divider_color"
        android:hint="@string/memoir_string"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/browser_actions_divider_color"
        android:hint="@string/author_hint_string"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/design_default_color_secondary"
        android:hint="@string/location_of_post_string"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#546E7A"
        android:textSize="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/displayMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/map_location_string"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>